--- a/src/assets/css/LunaAnimates.scss
+++ b/src/assets/css/LunaAnimates.scss
@@ -160,3 +160,26 @@
     }
   }
 }
+
+.searchListAnimation-enter-active,.searchListAnimation-leave-active{
+  transition: all 0.5s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+}
+.searchListAnimation-leave,.searchListAnimation-enter-to{
+  opacity: 1;
+  top: 44px;
+}
+.searchListAnimation-enter, .searchListAnimation-leave-to {
+  opacity: 0;
+  top: 100px;
+}
+.langSlideDown-enter-active,.langSlideDown-leave-active{
+  transition: all 0.5s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+}
+.langSlideDown-leave,.langSlideDown-enter-to{
+  opacity: 1;
+  top: 44px;
+}
+.langSlideDown-enter, .langSlideDown-leave-to {
+  opacity: 0;
+  top: 100px;
+}
